--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -29,14 +29,16 @@
 
   &__logo {
     text-decoration: none;
-    font-family: $logo-font;
     color: $primary-black;
+    font-family: $logo-font;
     p {
       font-size: 2.3rem;
+      font-family: inherit;
       position: relative;
       top: 5px;
 
       span {
+        font-family: inherit;
         width: 100%;
         font-size: 0.8rem;
         position: absolute;
